--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Simple Interest Calculator</h1>
+        <div class="mainvid">
+            <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
+            Amount <input type="number"  id="principal">  <br/>
+            Rate <input type="range"  id="rate" min="minval" max="maxval" value="default_val">  <br/>
+            <span id="rate_val">
+                10.25%
+            </span>
+            No. of Years <select id="years">
+                <option value="1">1</option>
+            </select><br/>
+            Interest : <span id="result"></span><br>
 
-        <button onclick="compute()">Compute</button>
+            <button onclick="compute()">Compute Interst</button>
+            <span id="result">
+            </span>
+        </div>
+        
+        <footer>
+            &#169; This Calculator belongs to Crispin Kalala
+        </footer>
     </body>
 </html>
